--- a/public/bower.json
+++ b/public/bower.json
@@ -21,6 +21,8 @@
     "angular-material": "^1.1.1",
     "angular-ui-router": "^0.3.1",
     "angular-scroll": "^1.0.0",
-    "angular-ui-bootstrap": "^2.1.3"
+    "angular-ui-bootstrap": "^2.1.3",
+    "material-design-icons": "^3.0.1",
+    "angular-upload": "^1.0.12"
   }
 }
