--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "multer": "^1.2.0",
     "nodemailer": "^2.6.4",
     "serve-favicon": "~2.3.0"
   }
