--- a/public/bower.json
+++ b/public/bower.json
@@ -23,6 +23,6 @@
     "angular-scroll": "^1.0.0",
     "angular-ui-bootstrap": "^2.1.3",
     "material-design-icons": "^3.0.1",
-    "angular-upload": "^1.0.12"
+    "ng-file-upload": "^12.2.12"
   }
 }
