Changes for Heroku

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "multer": "^1.2.0",
     "nodemailer": "^2.6.4",
     "serve-favicon": "~2.3.0"
-  }
+  },
+  "devDependencies": {
+	"bower": "^1.7.9"
+   }
 }
