--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "esscom",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www",
-	"postinstall": "bower cache clean && ./public/bower install"
+  "engines": {
+    "node": "4.3.1",
+	"npm" : "3.7.3"
   },
+  "scripts": {
+    "start": "node app.js",
+	"postinstall": "bower cache clean && node ./public/bower install"
+  },
+  "cacheDirectories": ["node_modules", "public/bower_components"],
   "dependencies": {
     "body-parser": "~1.15.1",
     "bower": "^1.7.9",
