--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "esscom",
   "version": "0.0.0",
   "private": true,
+  "engines" : {
+	"node": "4.3.1",
+	"npm": "3.7.3"
+  },
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+	"postinstall": "node bower install"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
