--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"npm": "3.7.3"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node ./bin/www",
 	"postinstall": "bower cache clean && node bower install"
   },
   "dependencies": {
