--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.0",
   "main": "app.js",
   "private": true,
-  "engines" : {
-	"node": "4.3.1",
-	"npm": "3.7.3"
+  "engines": {
+    "node": "4.3.1",
+    "npm": "3.7.3"
   },
   "scripts": {
     "start": "node ./bin/www",
-	"postinstall": "bower cache clean && bower install"
+    "postinstall": "bower cache clean && bower install"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
@@ -20,6 +20,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "multer": "^1.2.0",
+    "net": "^1.0.2",
     "nodemailer": "^2.6.4",
     "serve-favicon": "~2.3.0"
   }
