--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.2.0",
     "net": "^1.0.2",
     "nodemailer": "^2.6.4",
+    "request": "^2.79.0",
     "serve-favicon": "~2.3.0"
   }
 }
